--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  text-align: center;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -8,4 +9,5 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
 
