--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* src/index.css */
+/* src/styles.css */
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
