--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* font-size: calc(10px + 2vmin); */
   color: white;
 }
 
